--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -2,7 +2,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pre Entrega</title>
+    <link rel="stylesheet" href="/styles.css">
+    <title>{{title}}</title>
   </head>
   <body>
     {{{body}}}
