--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -5,5 +5,6 @@
     <input type="text" name="last_name" placeholder="Apellido" required>
     <input type="email" name="email" placeholder="Correo electrónico" required>
     <input type="password" name="password" placeholder="Contraseña" required>
+    <input type="number" name="age" placeholder="Edad" required>
     <button type="submit">Registrarme</button>
 </form>
